feat : 분류명 쿼리 파라미터에 따른 영화 분류 코드 추가